# bioportal-cli

./: .gitignore  README.md  bioportal-cli-0.1.0.r11.g0f1a571-1-any.pkg.tar.zst  pyproject.toml
.github/workflows/: ci.yml  package-drift.yml  release.yml  weekly-rebuild.yml
src/bioportal_cli/: __init__.py  __main__.py  cli.py  client.py  config.py  core.py  docs.py
tests/: test_cli_help.py  test_client.py  test_config.py  test_core.py  test_dispatch.py
