[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "bioportal-cli"
version = "0.1.0"
description = "Production-grade command-line wrapper for the NCBO BioPortal REST API"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
  { name = "OpenCode" }
]
keywords = ["bioportal", "ontology", "cli", "api", "ncbo"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27,<1",
]

[project.urls]
Homepage = "https://data.bioontology.org/documentation"
Documentation = "https://data.bioontology.org/documentation"
Repository = "https://github.com/ncbo"

[project.scripts]
bioportal = "bioportal_cli.cli:main"

[dependency-groups]
dev = [
  "build>=1.2.2",
  "mypy>=1.11",
  "pytest>=8.2",
  "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bioportal_cli"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
pretty = true
show_error_codes = true
mypy_path = ["src"]
